--- a/.classpath
+++ b/.classpath
@@ -34,6 +34,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/KtdsSchema"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/KtdsSchema"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
